# DjangoServelessPOC

./: .gitignore  .python-version  Makefile  README.md  loc.env  pyproject.toml
django_serverless_poc/: manage.py
django_serverless_poc/django_serverless_poc/: asgi.py  settings.py  urls.py  wsgi.py
docker/: django.Dockerfile  docker-compose.loc.yml
terraform/: terragrunt.hcl
terraform/environments/dev/: terragrunt.hcl
terraform/environments/pro/: terragrunt.hcl
terraform/src/: main.tf
terraform/src/compute/: api-gateway.tf  ecr.tf  ecs.tf  lambda.tf  outputs.tf  variables.tf
terraform/src/network/: load_balancer.tf  outputs.tf  variables.tf  vpc.tf
terraform/src/storage/: aurora_postgres_db.tf  outputs.tf  variables.tf
