[tool.poetry]
name = "djangoservelesspoc"
version = "0.1.0"
description = ""
authors = ["Cristian Galvis <cjgalvisc@unal.edu.co>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = "^5.0.6"
gunicorn = "^22.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
